Closed Bug 320402 Opened 19 years ago Closed 17 years ago

Bookmarks with long titles have their title "cut off" in Bookmark Bar

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: hwaara, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: fixed1.8.1.8)

Attachments

(2 files)

This is on Camino trunk.

Steps to reproduce:

1. Create a bookmark and put it on the bookmark toolbar.
2. Name it something longer than 22 characters
3. The title is cut off where the next bookmark item begins.

See the screenshot. I measured, and in my case the item is only allowed to be about 22 chars long.
The full title of the bookmark item in the middle of the picture is "SomaFM: Listener-Supported, Commercial-Free Internet Radio".

It's cut off to only show "SomaFM: Listener-Suppo".
what's your suggestion? that we allow them to be as long as they want?
Summary: Toolbar items with long titles have their title "cut off" → Bookmarks with long titles have their title "cut off" in Bookmark Bar
Yes. If I want them to be smaller, I just edit the title. This is how it's handled in Firefox, IE and other browsers. Safari seems to truncate in the middle, but this is just weird IMHO.
Ok, so concensus on IRC was that we probably should stick to status quo. However:

* when dragging a URL to the toolbar, we should pop up a "Rename" dialog similar to what Safari does. -> bug 320410

One remaining question for this bug: how about at least truncating too long bookmark titles?
any reason why we never used an ellipsis in the first place? just wondering.

should we end-truncate? middle truncate? not bother?
Attached patch fixSplinter Review
This has bugged me for a long time, and it's dirt simple to fix for 10.4+ (the trunk version of this is a one-liner, since we don't have to worry about the SDK or the runtime check)
Assignee: mikepinkerton → stuart.morgan
Status: NEW → ASSIGNED
Attachment #276895 - Flags: review?(hwaara)
Attachment #276895 - Flags: superreview+
Comment on attachment 276895 [details] [diff] [review]
fix

For the record: since we have an infinitely-long bookmarks bar anyways, I would also be fine with allowing bookmark titles to be long, but this is much better than status quo.
Attachment #276895 - Flags: review?(hwaara) → review+
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: fixed1.8.1.7
Resolution: --- → FIXED
Target Milestone: --- → Camino1.6
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: