Camino only - Bug 320402: Truncate long titles in the bookmark bar. r=hwaara sr=smfr