mozilla/camino/src/bookmarks/BookmarkButton.mm
@@ -51,6 +51,12 @@
 #import "MainController.h"
 #import "PreferenceManager.h"
 
+#if MAC_OS_X_VERSION_MIN_REQUIRED < MAC_OS_X_VERSION_10_4
+@interface NSCell(TigerCellMethods)
+- (void)setLineBreakMode:(NSLineBreakMode)mode;
+@end
+#endif
+
 @interface BookmarkButton(Private)
 
 - (void)showFolderPopupAction:(id)aSender;
@@ -74,6 +80,8 @@
     [self setImagePosition:NSImageLeft];
     [self setRefusesFirstResponder:YES];
     [self setFont:[NSFont labelFontOfSize:11.0]];
+    if ([[self cell] respondsToSelector:@selector(setLineBreakMode:)])
+      [[self cell] setLineBreakMode:NSLineBreakByTruncatingTail];
 
     mLastEventWasMenu = NO;
   }
